[gd_scene load_steps=12 format=3 uid="uid://c8ecphuclng4y"]

[ext_resource type="PackedScene" uid="uid://dn23km7rk18nk" path="res://src/main/component/weapon_base.tscn" id="1_cjbu8"]
[ext_resource type="Script" path="res://src/main/scene/role/standard_weapons/weapon_11/weapon_11.gd" id="2_xkuu3"]
[ext_resource type="Curve" uid="uid://dr2hrf87d1to4" path="res://src/main/scene/role/standard_weapons/CommonRes/Spear/charge_speed_curve.tres" id="3_5w3jq"]
[ext_resource type="Shader" path="res://src/main/etc/shader/outline.gdshader" id="3_y0yvj"]
[ext_resource type="Texture2D" uid="uid://c2f30cdwbd73x" path="res://src/main/scene/role/standard_weapons/weapon_11/icon.png" id="4_bor11"]
[ext_resource type="Curve" uid="uid://88cgo8te66x" path="res://src/main/scene/role/standard_weapons/CommonRes/Spear/attack_speed_curve.tres" id="4_dppsg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3d5or"]
resource_local_to_scene = true
shader = ExtResource("3_y0yvj")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_width = 0.6

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ljpq4"]
radius = 7.0
height = 48.0

[sub_resource type="Animation" id="Animation_8omk7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_k7jtj"]
resource_name = "charge"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-10, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7mhyd"]
_data = {
"RESET": SubResource("Animation_8omk7"),
"charge": SubResource("Animation_k7jtj")
}

[node name="Weapon11" instance=ExtResource("1_cjbu8")]
script = ExtResource("2_xkuu3")
ice_pick_damage_ratio = 0.5
charge_speed_curve = ExtResource("3_5w3jq")
attack_speed_curve = ExtResource("4_dppsg")

[node name="Sprite2D" parent="Graphics" index="0"]
material = SubResource("ShaderMaterial_3d5or")
position = Vector2(6, 0)
rotation = 0.785398
texture = ExtResource("4_bor11")

[node name="CollisionShape2D" parent="Graphics/HitBox" index="0"]
position = Vector2(6, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ljpq4")

[node name="icicle_slots" type="Node2D" parent="Graphics" index="6"]
visible = false

[node name="slot1" type="Marker2D" parent="Graphics/icicle_slots" index="0" groups=["weapon_slot"]]
position = Vector2(0, -12)

[node name="slot2" type="Marker2D" parent="Graphics/icicle_slots" index="1" groups=["weapon_slot"]]
position = Vector2(0, 12)

[node name="slot3" type="Marker2D" parent="Graphics/icicle_slots" index="2" groups=["weapon_slot"]]
position = Vector2(40, 0)

[node name="ReloadProgressBar" parent="." index="4"]
position = Vector2(0, 15)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="7"]
libraries = {
"": SubResource("AnimationLibrary_7mhyd")
}
